Complete Database Config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,16 @@
 # Database Connection Configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/dep11_amigo_student
-spring.datasource.username=posgres
+spring.datasource.username=postgres
 spring.datasource.password=Sansaara9@
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.hikari.maximum-pool-size=10
 
 # Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
+
+
+logging.file.name=logs/app.log
+logging.logback.rollingpolicy.max-history=30
